--- a/styles/semantic.css
+++ b/styles/semantic.css
@@ -14,6 +14,9 @@ h1, h2, h3, h4, h5 ,h6 {
     border-bottom: 1px solid #000;
     padding-bottom: 10px;
     font-size: 20px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .logo {
@@ -22,6 +25,7 @@ h1, h2, h3, h4, h5 ,h6 {
     color: lightgreen;
     background-color: rebeccapurple;
     font-weight: 700;
+    padding: 5px 15px;
 }
 
 ul {
@@ -32,7 +36,7 @@ ul {
 }
 
 ul > li {
-    margin-right: 10px;
+    margin-right: 30px;
 }
 
 a {
@@ -51,12 +55,23 @@ a {
 .aside {
     border-right: 1px solid #000;
     padding-right: 20px;
+    border-right: none;
+    padding-right: 0;
+    background-color: lavender;
+    padding: 10px 20px;
+}
+
+section {
+    background-color: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
 }
 
 .post {
     padding-bottom: 20px;
 }
 
-.footer {
+footer {
     font-size: 13px;
+    padding: 0 20px;
 }
